--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1",
-    "webpack-glsl-loader": "^1.0.1"
+    "webpack-glsl-loader": "^1.0.1",
+    "fsevents": "^2.0.7"
   },
   "dependencies": {
+    "chokidar": "^3.0.2",
     "glslify-loader": "^2.0.0",
     "gsap": "^2.1.3",
     "raw-loader": "^1.0.0",
