--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gsap": "^2.1.3",
     "raw-loader": "^1.0.0",
     "stats.js": "^0.17.0",
-    "three": "^0.102.1"
+    "three": "^0.102.1",
+    "three.equirectangular-to-cubemap": "^1.1.0"
   }
 }
