--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "chokidar": "^3.0.2",
+    "ffmpeg": "0.0.4",
     "glslify-loader": "^2.0.0",
     "gsap": "^2.1.3",
     "raw-loader": "^1.0.0",
